@@ -244,7 +244,7 @@ t25	ATtiny25
 t26	ATtiny26
 t45	ATtiny45
 t85	ATtiny85
-ucr2    AT32uca0512
+ucr2	AT32uca0512
 x128a1	ATxmega128A1
 x128a1d	ATxmega128A1revD
 .TE
